// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component PossiblyMyRecords renders active filters 1`] = `
<StandardPage
  className=""
  title="Claim possible publications"
>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <StandardCard
        className=""
        text={
          <div>
            <p>
              No publications were automatically matched for you to claim.
            </p>
          </div>
        }
        title="No matching publications found"
      >
        <div>
          <p>
            No publications were automatically matched for you to claim.
          </p>
        </div>
      </StandardCard>
    </div>
    <div
      className="column is-3 is-hidden-mobile"
    >
      <StandardRighthandCard
        title="Refine results"
      >
        <FacetsFilter
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {
                "Year": Object {
                  "from": 2000,
                  "to": 2010,
                },
              },
            }
          }
          disabled={false}
          excludeFacetsList={
            Array [
              "Scopus document type",
              "Subtype",
              "Year published",
            ]
          }
          facetsData={Object {}}
          onFacetsChanged={[Function]}
          renameFacetsList={
            Object {
              "Display type": "Publication type",
            }
          }
          showOpenAccessFilter={false}
        />
      </StandardRighthandCard>
    </div>
  </div>
</StandardPage>
`;

exports[`Component PossiblyMyRecords renders alert when the hide pub api fails 1`] = `
<StandardPage
  className=""
  title="Claim possible publications"
>
  <Alert
    allowDismiss={false}
    dismissTitle="Click to dismiss this alert"
    message="Error has occurred during request and request cannot be processed. Test error message Please contact eSpace administrators or try again later."
    showLoader={false}
    title="Error"
    type="error"
  />
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <StandardCard
        className=""
        text={
          <div>
            <p>
              No publications were automatically matched for you to claim.
            </p>
          </div>
        }
        title="No matching publications found"
      >
        <div>
          <p>
            No publications were automatically matched for you to claim.
          </p>
        </div>
      </StandardCard>
    </div>
  </div>
</StandardPage>
`;

exports[`Component PossiblyMyRecords renders list of publications and counts and facets 1`] = `
<StandardPage
  className=""
  title="Claim possible publications"
>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to hide selected possibly your publication from this view?",
        "confirmationTitle": "Hide publication",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <StandardCard
        className=""
        title="Possibly your publications"
      >
        <div>
          3 out of 5 potential match(es) displayed. Select any item to claim it as your work.
          <PublicationsList
            customActions={
              Array [
                Object {
                  "handleAction": [Function],
                  "label": "Claim this publication",
                  "primary": true,
                },
                Object {
                  "handleAction": [Function],
                  "label": "Not mine",
                },
              ]
            }
            hideCitationContent={false}
            hideCountDiff={false}
            publicationsList={
              Array [
                1,
                2,
                3,
              ]
            }
            publicationsListSubset={Array []}
            showDefaultActions={false}
            showMetrics={false}
            showSourceCountIcon={false}
            showSources={false}
            subsetCustomActions={
              Array [
                Object {
                  "disabled": true,
                  "label": "In progress",
                  "primary": false,
                },
              ]
            }
          />
        </div>
      </StandardCard>
    </div>
    <div
      className="column is-3 is-hidden-mobile"
    >
      <StandardRighthandCard
        title="Refine results"
      >
        <FacetsFilter
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          disabled={false}
          excludeFacetsList={
            Array [
              "Scopus document type",
              "Subtype",
              "Year published",
            ]
          }
          facetsData={
            Object {
              "Display type": Object {
                "buckets": Array [
                  Object {
                    "doc_count": 95,
                    "key": 179,
                  },
                  Object {
                    "doc_count": 34,
                    "key": 130,
                  },
                  Object {
                    "doc_count": 2,
                    "key": 177,
                  },
                  Object {
                    "doc_count": 2,
                    "key": 183,
                  },
                  Object {
                    "doc_count": 1,
                    "key": 174,
                  },
                ],
                "doc_count_error_upper_bound": 0,
                "sum_other_doc_count": 3,
              },
              "Keywords": Object {
                "buckets": Array [
                  Object {
                    "doc_count": 15,
                    "key": "Brca1",
                  },
                  Object {
                    "doc_count": 15,
                    "key": "Oncology",
                  },
                  Object {
                    "doc_count": 13,
                    "key": "Breast cancer",
                  },
                  Object {
                    "doc_count": 12,
                    "key": "Genetics & Heredity",
                  },
                  Object {
                    "doc_count": 10,
                    "key": "Biochemistry & Molecular Biology",
                  },
                ],
                "doc_count_error_upper_bound": 0,
                "sum_other_doc_count": 641,
              },
            }
          }
          onFacetsChanged={[Function]}
          renameFacetsList={
            Object {
              "Display type": "Publication type",
            }
          }
          showOpenAccessFilter={false}
        />
      </StandardRighthandCard>
    </div>
  </div>
</StandardPage>
`;

exports[`Component PossiblyMyRecords renders loading component while loading publication data 1`] = `
<StandardPage
  className=""
  title="Claim possible publications"
>
  <div
    className="is-centered"
  >
    <InlineLoader
      message="Searching for possibly your publications..."
    />
  </div>
  <div
    className="columns"
  />
</StandardPage>
`;

exports[`Component PossiblyMyRecords renders loading screen while loading publication counts 1`] = `
<StandardPage
  className=""
  title="Claim possible publications"
>
  <div
    className="is-centered"
  >
    <InlineLoader
      message="Searching for possibly your publications..."
    />
  </div>
  <div
    className="columns"
  />
</StandardPage>
`;

exports[`Component PossiblyMyRecords renders no results 1`] = `
<StandardPage
  className=""
  title="Claim possible publications"
>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <StandardCard
        className=""
        text={
          <div>
            <p>
              No publications were automatically matched for you to claim.
            </p>
          </div>
        }
        title="No matching publications found"
      >
        <div>
          <p>
            No publications were automatically matched for you to claim.
          </p>
        </div>
      </StandardCard>
    </div>
  </div>
</StandardPage>
`;

exports[`Component PossiblyMyRecords renders nothing while account is loading 1`] = `""`;
